plugins {
	id 'java'
	id 'war'
	id 'checkstyle'
	id 'jacoco'
	id 'com.diffplug.spotless' version '8.10.2'
	id 'org.springframework.boot' version '4.1.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.dddjava.jig-gradle-plugin' version '2026.8.1'
}

checkstyle {
	toolVersion = '10.21.4'
	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

spotless {
	java {
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
		googleJavaFormat()
		removeUnusedImports()
		importOrder()
		trimTrailingWhitespace()
		endWithNewline()
	}
}

jacoco {
	toolVersion = '0.8.13'
}

checkstyleTest.enabled = false

group = 'com.official'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencyManagement {
	imports {
		mavenBom 'org.springframework.modulith:spring-modulith-bom:2.1.1'
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-aspectj:4.1.1'
	implementation 'org.springframework.boot:spring-boot-starter-validation:4.1.1'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc:4.1.1'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-security:4.1.1'
	implementation 'org.modelmapper:modelmapper:3.2.6'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-scalar:3.1.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	compileOnly 'org.projectlombok:lombok:1.18.48'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:4.1.1'
	runtimeOnly 'org.postgresql:postgresql:42.7.13'
	annotationProcessor 'org.projectlombok:lombok:1.18.48'
	providedRuntime 'org.apache.tomcat.embed:tomcat-embed-core:11.0.25'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:4.1.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test:4.1.1'
	testImplementation 'org.springframework.boot:spring-boot-jdbc-test:4.1.1'
	testImplementation 'org.springframework.security:spring-security-test:7.1.1'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.1.0'
	testImplementation 'org.junit.jupiter:junit-jupiter:6.1.3'
	testImplementation 'org.mockito:mockito-core:5.23.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.23.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.1.3'
	testImplementation 'org.springframework.modulith:spring-modulith-docs'
}

tasks.named('test') {
	enabled = false
}

tasks.register('unitTest', Test) {
	description = '単体テストのみを実行する'
	group = 'verification'
	useJUnitPlatform()
	exclude '**/*IntegrationTest*'
	exclude '**/mapper/*Test*'
	exclude '**/ModulithDocumentationTest*'
}

tasks.named('check') {
	dependsOn tasks.named('unitTest')
	dependsOn tasks.named('spotlessCheck')
}

tasks.register('integrationTest', Test) {
	description = '統合テストのみを実行する'
	group = 'verification'
	useJUnitPlatform()
	include '**/*IntegrationTest*'
	include '**/mapper/*Test*'
}

tasks.register('allTest', Test) {
	description = '単体テストと統合テストをすべて実行する'
	group = 'verification'
	useJUnitPlatform()
	exclude '**/ModulithDocumentationTest*'
}

tasks.register('generateModulithDocs', Test) {
	description = 'Spring Modulithのドキュメントを生成する'
	group = 'documentation'
	useJUnitPlatform()
	include '**/ModulithDocumentationTest*'
}

// build/jacoco/ 配下のカバレッジ実行データ（*.exec）からカバレッジレポート（XML/HTML）を
// 生成するタスクを登録する。CIでは各テストジョブが生成した .exec を build/jacoco/ に集めてから
// これらのタスクを実行するため、テスト自体の実行は強制しない（同一ビルド内で同時指定された
// 場合のみ mustRunAfter で順序を保証する）。存在しない .exec は空として扱う。
def registerJacocoReport = { String name, String desc, String execPattern ->
	tasks.register(name, JacocoReport) {
		description = desc
		group = 'verification'
		dependsOn 'classes'
		mustRunAfter tasks.withType(Test)

		executionData.setFrom(fileTree(layout.buildDirectory).include(execPattern))
		sourceDirectories.setFrom(files(sourceSets.main.java.srcDirs))
		classDirectories.setFrom(files(sourceSets.main.output))

		reports {
			xml.required = true
			html.required = true
		}
	}
}

registerJacocoReport('jacocoUnitReport', '単体テストのみのカバレッジレポートを生成する', 'jacoco/unitTest.exec')
registerJacocoReport('jacocoIntegrationReport', '結合テストのみのカバレッジレポートを生成する', 'jacoco/integrationTest.exec')
registerJacocoReport('jacocoAggregateReport', '単体テストと結合テストのカバレッジを集約してレポートを生成する', 'jacoco/*.exec')

jig {
	modelPattern = 'com\\.web\\.gallery\\..*'
}

tasks.named('jigReports') {
	dependsOn 'classes'
}
